# ToolsLibrary

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  appveyor.yml  vcpkg.json
.github/workflows/: codeql-analysis.yml
cmake/: ut.cmake
src/: CMakeLists.txt
src/tl/: algorithm.hpp  concepts.hpp  input.hpp  random.hpp  read.hpp  string.hpp  utility.hpp  write.hpp
tests/src/: CMakeLists.txt  algorithm_test.cpp  input_test.cpp  random_test.cpp  read_test.cpp  sequence_test.cpp  string_test.cpp  ut_1.cpp  write_test.cpp
tests/src/cmake/: add_test_common.cmake  clang_compat.cmake  compiler_warnings.cmake
