include(cmake/compiler_warnings.cmake)
add_library(${PROJECT_NAME}_project_warnings INTERFACE)
set_project_warnings(${PROJECT_NAME}_project_warnings ON)
include(cmake/add_test_common.cmake)
add_test_common(input_test)
add_test_common(read_test)
add_test_common(random_test)
add_test_common(sequence_test)
add_test_common(string_test)
add_test_common(algorithm_test)