include(cmake/compiler_warnings.cmake)
include(cmake/clang_compat.cmake)
add_library(${PROJECT_NAME}_project_warnings INTERFACE)
set_project_warnings(${PROJECT_NAME}_project_warnings ON)
add_library(${PROJECT_NAME}_clang_compat INTERFACE)
set_clang_compat(${PROJECT_NAME}_clang_compat)
include(cmake/add_test_common.cmake)
add_test_common(input_test)
add_test_common(read_test)
#add_test_common(random_test)
add_test_common(sequence_test)
add_test_common(string_test)
add_test_common(algorithm_test)